# cookiecutter_hypermodern_ds

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh  pre_gen_project.py
tests/: conftest.py  test_creation.py
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  pyproject.toml
{{ cookiecutter.repo_name }}/docs/: conf.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/data/: make_dataset.py
